# pos-toolkit

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: medusa-pos-switchover.md
plugins/pos-hardware/: Cargo.toml  build.rs
plugins/pos-hardware/permissions/: default.toml
plugins/pos-hardware/permissions/autogenerated/: reference.md
plugins/pos-hardware/permissions/autogenerated/commands/: check_physical_keyboard.toml  list_system_printers.toml  list_usb_devices.toml  print_job.toml  toggle_virtual_keyboard.toml
plugins/pos-hardware/permissions/schemas/: schema.json
plugins/pos-hardware/src/: keyboard.rs  lib.rs  printing.rs  usb.rs  winprint.rs
plugins/pos-hardware/tests/: hardware_smoke.rs  network_print.rs  wire_format.rs
