[package]
name = "tauri-plugin-pos-hardware"
version = "0.1.0"
description = "POS peripheral layer for Tauri apps: ESC/POS printing (network/USB/spooler), cash-drawer kick, USB printer enumeration, keyboard handling"
authors = ["Nari Solutions"]
license = "Apache-2.0"
repository = "https://github.com/narisolutions/pos-toolkit"
edition = "2021"
links = "tauri-plugin-pos-hardware"

[features]
# Derives `specta::Type` on the wire types (PrinterTarget, PrintOp, …) so
# tauri-specta hosts can export TS bindings for commands that take them.
# Exact-pinned: specta 2.0.0 release candidates break APIs between rcs.
specta = ["dep:specta"]

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
specta = { version = "=2.0.0-rc.25", optional = true, features = ["derive"] }
log = "0.4"
# `usb` uses rusb/libusb and scans all interfaces for bulk IN+OUT — fixes Windows
# "no suitable interface number found" from `native_usb` (nusb) when `interfaces()`
# is empty. (Carried over from medusa-pos.)
escpos = { version = "0.19.0", features = ["graphics", "usb"] }
rusb = "0.9"

[dev-dependencies]
serde_json = "1"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_Input",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Security",
] }
